different flow for admin and user added.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,10 +29,17 @@ spring:
     oauth2:
       client:
         registration:
-          google:
+          google-user:
             client-id: ${GOOGLE_CLIENT_ID:971488701765-jtrj2kv633d03vio9qj08fu7oobu5ja1.apps.googleusercontent.com}
             client-secret: ${GOOGLE_CLIENT_SECRET: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}
             scope: openid,profile,email
+            provider: google
+            redirect-uri: "{baseUrl}/login/oauth2/code/google"
+          google-admin:
+            client-id: ${GOOGLE_CLIENT_ID:971488701765-jtrj2kv633d03vio9qj08fu7oobu5ja1.apps.googleusercontent.com}
+            client-secret: ${GOOGLE_CLIENT_SECRET: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}
+            scope: openid,profile,email
+            provider: google
             redirect-uri: "{baseUrl}/login/oauth2/code/google"
         provider:
           google:
